// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DocumentOutline header blocks present should match snapshot 1`] = `
<div
  className="document-outline"
>
  <ul>
    <TableOfContentsItem
      isValid={true}
      key="0"
      level="H2"
      path={Array []}
      target="765e36f0-afeb-4554-87d2-ae1f634dadee"
    >
      <Component
        format="string"
        tagName="span"
        value="Heading parent"
      />
    </TableOfContentsItem>
    <TableOfContentsItem
      isValid={true}
      key="1"
      level="H3"
      path={Array []}
      target="bed396cc-2741-4db5-86e4-15e1cff68874"
    >
      <Component
        format="string"
        tagName="span"
        value="Heading child"
      />
    </TableOfContentsItem>
  </ul>
</div>
`;

exports[`DocumentOutline header blocks present should render warnings for multiple h1 headings 1`] = `
<div
  className="document-outline"
>
  <ul>
    <TableOfContentsItem
      isValid={false}
      key="0"
      level="H1"
      path={Array []}
      target="ff58d7b6-f312-464c-8c09-ffb7e76d91b7"
    >
      <Component
        format="string"
        tagName="span"
        value="Heading 1"
      />
      <br
        key="incorrect-break-multiple-h1"
      />
      <em
        key="incorrect-message-multiple-h1"
      >
        (Multiple H1 headings are not recommended)
      </em>
    </TableOfContentsItem>
    <TableOfContentsItem
      isValid={false}
      key="1"
      level="H1"
      path={Array []}
      target="ff58d7b6-f312-464c-8c09-ffb7e76d91b7"
    >
      <Component
        format="string"
        tagName="span"
        value="Heading 1"
      />
      <br
        key="incorrect-break-multiple-h1"
      />
      <em
        key="incorrect-message-multiple-h1"
      >
        (Multiple H1 headings are not recommended)
      </em>
    </TableOfContentsItem>
  </ul>
</div>
`;
